--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
    <div id="ttr_page" class="container">
       <header id="ttr_header">
          <div id="ttr_header_inner">
-            <a href="home.html" target="_self">
+            <a href="index.html" target="_self">
                <img class="ttr_header_logo" src="logo.png">
             </a>
             <div class="ttr_headershape01">
@@ -68,7 +68,7 @@
                </div>
                <div class="menu-center collapse navbar-collapse">
                   <ul class="ttr_menu_items nav navbar-nav navbar-left">
-                     <li class="ttr_menu_items_parent dropdown active"><a href="home.html"
+                     <li class="ttr_menu_items_parent dropdown active"><a href="index.html"
                            class="ttr_menu_items_parent_link_active"><span class="menuchildicon"></span>Bosh sahifa</a>
                         <hr class="horiz_separator" />
                      </li>
