--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
    </script>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>
-      Student Home
+      StudentHouse
    </title>
    <link rel="stylesheet" href="bootstrap.css" type="text/css" media="screen" />
    <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+   <link rel="icon" type="image/x-icon" href="images/favicon.ico.ico">
 
    <script type="text/javascript" src="totop.js">
    </script>
