--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
                                  Biz bilan oson bog'laning</span></p>
                            <p style="margin:0.71em 0em 0.36em 0em;"><span
                                  style="font-family:'Titillium Web','Arial';font-style:italic;font-size:1.429em;color:rgba(255,111,5,1);">
-                                 Sizning har bir so'rovingiz javobsiq qoldirilmaydi</span></p>
+                                 Sizning har bir so'rovingiz javobsiz qoldirilmaydi</span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div style="clear:both;"></div>
