--- a/about-us.html
+++ b/about-us.html
@@ -38,10 +38,10 @@
                <div class="html_content">
                   <p style="margin:0em 0em 0.57em 0em;line-height:1.40845070422535;"><span
                         style="font-family:'Open Sans','Open Sans','Arial';font-size:1.143em;color:rgba(53,53,53,1);">
-                        <a href="tel:+998941234567">Tel:- +998 94 123 45 67</a></span></p>
+                        <a href="tel:+998944911901">Tel:- +998 94 491 19 01</a></span></p>
                   <p style="margin:0.57em 0em 0.57em 0em;line-height:1.40845070422535;"><span
                         style="font-family:'Open Sans','Open Sans','Arial';font-size:1.143em;color:rgba(53,53,53,1);">
-                        <a href="mailto:demo@demo.uz">Email:- demo@demo.uz</a></span></p>
+                        <a href="mailto:behzodmalik@gmail.com">Email:- behzodmalik@gmail.com</a></span></p>
                </div>
             </div>
          </div>
@@ -207,19 +207,11 @@
       <footer id="ttr_footer">
          <div class="ttr_footer_bottom_footer">
             <div class="ttr_footer_bottom_footer_inner">
-               <div id="ttr_footer_designed_by_links">
-
-                  <span id="ttr_footer_designed_by">
-                     Designed By KixGO
-                  </span> <a href="http://www.kixgo.com" target="_self">
-                     Website Builder
-                  </a>
-               </div>
-               <a href="#" class="ttr_footer_facebook" target="_self">
+               <a href="https://facebook.com/studenthousen1" class="ttr_footer_facebook" target="_self">
                </a>
-               <a href="#" class="ttr_footer_twitter" target="_self">
+               <a href="https://instagram.com/studenthousen1" class="ttr_footer_twitter" target="_self">
                </a>
-               <a href="#" class="ttr_footer_googleplus" target="_self">
+               <a href="https://t.me/studenthousen1" class="ttr_footer_googleplus" target="_self">
                </a>
             </div>
          </div>
