--- a/agents.html
+++ b/agents.html
@@ -39,10 +39,10 @@
                <div class="html_content">
                   <p style="margin:0em 0em 0.57em 0em;line-height:1.40845070422535;"><span
                         style="font-family:'Open Sans','Open Sans','Arial';font-size:1.143em;color:rgba(53,53,53,1);">
-                        <a href="tel:+998941234567">Tel:- +998 94 123 45 67</a></span></p>
+                        <a href="tel:+998944911901">Tel:- +998 94 491 19 01</a></span></p>
                   <p style="margin:0.57em 0em 0.57em 0em;line-height:1.40845070422535;"><span
                         style="font-family:'Open Sans','Open Sans','Arial';font-size:1.143em;color:rgba(53,53,53,1);">
-                        <a href="mailto:demo@demo.uz">Email:- demo@demo.uz</a></span></p>
+                        <a href="mailto:behzodmalik@gmail.com">Email:- behzodmalik@gmail.com</a></span></p>
                </div>
             </div>
          </div>
@@ -167,7 +167,7 @@
                         <div class="html_content">
                            <p><span class="ttr_image"
                                  style="float:Left;overflow:hidden;margin:0em 0em 0em 0em;"><span><img
-                                       class="ttr_uniform" src="images/av1.png"
+                                       class="ttr_uniform" src="images/human1.png"
                                        style="max-width:250px;max-height:250px;" /></span></span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
@@ -184,7 +184,7 @@
                         <div class="html_content">
                            <p><span class="ttr_image"
                                  style="float:Left;overflow:hidden;margin:0em 0em 0em 0em;"><span><img
-                                       class="ttr_uniform" src="images/av2.png"
+                                       class="ttr_uniform" src="images/human2.png"
                                        style="max-width:250px;max-height:250px;" /></span></span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
@@ -254,7 +254,7 @@
                         <div class="html_content">
                            <p><span class="ttr_image"
                                  style="float:Left;overflow:hidden;margin:0em 0em 0em 0em;"><span><img
-                                       class="ttr_uniform" src="images/av3.png"
+                                       class="ttr_uniform" src="images/human4.png"
                                        style="max-width:250px;max-height:250px;" /></span></span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
@@ -271,7 +271,7 @@
                         <div class="html_content">
                            <p><span class="ttr_image"
                                  style="float:Left;overflow:hidden;margin:0em 0em 0em 0em;"><span><img
-                                       class="ttr_uniform" src="images/26.jpg"
+                                       class="ttr_uniform" src="images/human5.png"
                                        style="max-width:250px;max-height:250px;" /></span></span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
@@ -317,12 +317,11 @@
       <footer id="ttr_footer">
          <div class="ttr_footer_bottom_footer">
             <div class="ttr_footer_bottom_footer_inner">
-
-               <a href="#" class="ttr_footer_facebook" target="_self">
+               <a href="https://facebook.com/studenthousen1" class="ttr_footer_facebook" target="_self">
                </a>
-               <a href="#" class="ttr_footer_twitter" target="_self">
+               <a href="https://instagram.com/studenthousen1" class="ttr_footer_twitter" target="_self">
                </a>
-               <a href="#" class="ttr_footer_googleplus" target="_self">
+               <a href="https://t.me/studenthousen1" class="ttr_footer_googleplus" target="_self">
                </a>
             </div>
          </div>
