--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                <div class="html_content">
                   <p style="margin:0em 0em 0.57em 0em;line-height:1.40845070422535;"><span
                         style="font-family:'Open Sans','Open Sans','Arial';font-size:1.143em;color:rgba(53,53,53,1);">
-                        <a href="tel:+998941234567">Tel:- +998 94 123 45 67</a></span></p>
+                        <a href="tel:+998944911901">Tel:- +998 94 491 19 01</a></span></p>
                   <p style="margin:0.57em 0em 0.57em 0em;line-height:1.40845070422535;"><span
                         style="font-family:'Open Sans','Open Sans','Arial';font-size:1.143em;color:rgba(53,53,53,1);">
-                        <a href="mailto:demo@demo.uz">Email:- demo@demo.uz</a></span></p>
+                        <a href="mailto:behzodmalik@gmail.com">Email:- behzodmalik@gmail.com</a></span></p>
                </div>
             </div>
          </div>
@@ -285,13 +285,15 @@
                               </span></p>
                            <p style="text-align:Center;"><span
                                  style="font-family:'Titillium Web','Arial';font-style:italic;font-weight:300;font-size:1.143em;color:rgba(255,111,5,1);">
-                                 3 xonali</span></p>
+                                 1200000 so'm   
+                              </span></p>
                            <p style="margin:0.71em 0em 0.36em 0em;text-align:Center;line-height:1.54929577464789;"><span
                                  style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(102,102,102,1);">
+                                 <b>3 xonali</b> <br>
                                  Uy 3 etajda joylashgan. Holati yaxshi remontlari yaqinda bo'lgan. Hamma jihozlari bor. Sizdan faqat kelish va yashashni talab qiladi holos <br>
                                  Manzil: Farg'ona shahar, aeroport ko'chasi <br>
-                                 Mo'ljal: TATU yonida
-                                 
+                                 Mo'ljal: TATU yonida <br><br>
+                                 <a href="tel:+998944911901">Tel: +998 94 491 19 01</a>
                               </span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
@@ -304,21 +306,24 @@
                      <div class="ttr_Home_html_column22">
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div id="house2" class="html_content">
-                           <p style="text-align:Center;"><span class="ttr_image"
+                           <p style="text-align:Center;"><span class="ttr_image" style="margin-bottom: 0 !important;"
                                  style="float:Left;overflow:hidden;margin:0em 0em 1.43em 0em;"><span><img id="house2"
                                        class="ttr_uniform" src="images/house2.png"
-                                       style="max-width:350px;max-height:255px;" /></span></span><span
-                                 style="font-family:'Titillium Web','Arial';font-size:1.571em;color:rgba(53,53,53,1);">Hovli
+                                       style="max-width:350px;max-height:255px;" /></span></span><p style="font-family:'Titillium Web','Arial' !important; font-size:1.571em !important; color:rgba(53,53,53,1) !important; text-align: center !important;">Hovli
                                  uy
-                              </span></p>
+                                 </p></p>
                            <p style="margin:0.36em 0em 0.36em 0em;text-align:Center;"><span
                                  style="font-family:'Titillium Web','Arial';font-style:italic;font-weight:300;font-size:1.143em;color:rgba(255,111,5,1);">
-                                 4 xonali</span></p>
+                                 2 000 000 so'm</span></p>
                            <p style="margin:0.71em 0em 0.36em 0em;text-align:Center;line-height:1.54929577464789;"><span
                                  style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(102,102,102,1);">
+                                 <b>4 xonali</b> <br>
                               Uyni ta'mirlari yaxshi. Yaqinida maktab, supermarket, bolalar o'yingohi bor. Hamma maishiy jihozlar bilan ta'minlangan. <br>
                               Manzil: Mustaqillik ko'chasi 13-uy.
-                              </span></p>
+                              </span><br><br>
+                              <a href="tel:+9984911901">Tel: +998 94 491 19 01</a>
+                           </p>
+                              
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div style="clear:both;"></div>
@@ -339,13 +344,16 @@
                               </span></p>
                            <p style="margin:0.36em 0em 0.36em 0em;text-align:Center;"><span
                                  style="font-family:'Titillium Web','Arial';font-style:italic;font-weight:300;font-size:1.143em;color:rgba(255,111,5,1);">
-                                 2 xonali</span></p>
+                                 2 500 000 so'm</span></p>
                            <p style="margin:0.71em 0em 0.36em 0em;text-align:Center;line-height:1.54929577464789;"><span
                                  style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(102,102,102,1);">
+                                 <b>2 xonali</b> <br>
                                  Uy 1 etajda joylashgan. Holati yaxshi remontlari yaqinda bo'lgan. Hamma jihozlari bor. Sizdan faqat kelish va yashashni talab qiladi holos <br>
                                  Manzil: Farg'ona shahar, aeroport ko'chasi <br>
                                  Mo'ljal: TATU yonida
-                                </span></p>
+                                </span><br><br>
+                                <a href="tel:+998944911901">Tel: +998 94 491 19 01</a>
+                              </p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div style="clear:both;"></div>
@@ -366,11 +374,14 @@
                               </span></p>
                            <p style="margin:0.36em 0em 0.36em 0em;text-align:Center;"><span
                                  style="font-family:'Titillium Web','Arial';font-style:italic;font-weight:300;font-size:1.143em;color:rgba(255,111,5,1);">
-                                 1 xonali </span></p>
+                                 3 000 000 so'm </span></p>
                            <p style="margin:0.71em 0em 0.36em 0em;text-align:Center;line-height:1.54929577464789;"><span
                                  style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(102,102,102,1);">
+                                 <b>4 xonali</b><br>
                                  Uyni ta'mirlari yaxshi. Yaqinida maktab, supermarket, bolalar o'yingohi bor. Hamma maishiy jihozlar bilan ta'minlangan. <br>
-                                 Manzil: Mustaqillik ko'chasi 24-uy.</span></p>
+                                 Manzil: Mustaqillik ko'chasi 24-uy.</span><br><br>
+                                 <a href="tel:+9984911901">Tel: +998 94 491 19 01</a>                             
+                              </p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div style="clear:both;"></div>
@@ -391,12 +402,15 @@
                               </span></p>
                            <p style="margin:0.36em 0em 0.36em 0em;text-align:Center;"><span
                                  style="font-family:'Titillium Web','Arial';font-style:italic;font-weight:300;font-size:1.143em;color:rgba(255,111,5,1);">
-                                 3 xonali</span></p>
+                                 800 000 so'm</span></p>
                            <p style="margin:0.71em 0em 0.36em 0em;text-align:Center;line-height:1.54929577464789;"><span
                                  style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(102,102,102,1);">
+                                 <b>1 xonali</b><br>
                                  Uy 4 - etajda joylashgan. Holati yaxshi remontlari yaqinda bo'lgan. Hamma jihozlari bor. Sizdan faqat kelish va yashashni talab qiladi holos <br>
                                  Manzil: Farg'ona shahar, aeroport ko'chasi <br>
-                                 Mo'ljal: TATU yonida</span></p>
+                                 Mo'ljal: TATU yonida</span><br><br>
+                                 <a href="tel:+9984911901">Tel: +998 94 491 19 01</a>
+                              </p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div style="clear:both;"></div>
@@ -417,11 +431,14 @@
                               </span></p>
                            <p style="margin:0.36em 0em 0.36em 0em;text-align:Center;"><span
                                  style="font-family:'Titillium Web','Arial';font-style:italic;font-weight:300;font-size:1.143em;color:rgba(255,111,5,1);">
-                                 4 xonali</span></p>
+                                 2 500 000 so'm</span></p>
                            <p style="margin:0.71em 0em 0.36em 0em;text-align:Center;line-height:1.54929577464789;"><span
                                  style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(102,102,102,1);">
+                                 <b>3 xonali</b><br>
                                  Uyni ta'mirlari yaxshi. Yaqinida maktab, supermarket, bolalar o'yingohi bor. Hamma maishiy jihozlar bilan ta'minlangan. <br>
-                                 Manzil: Mustaqillik ko'chasi 114-uy.</span></p>
+                                 Manzil: Mustaqillik ko'chasi 114-uy.</span><br><br>
+                                 <a href="tel:+9984911901">Tel: +998 94 491 19 01</a>
+                              </p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
                         <div style="clear:both;"></div>
@@ -439,7 +456,7 @@
                                  style="font-family:'Titillium Web','Arial';font-size:2.571em;color:rgba(255,255,255,1);">
                                  Biz mijozlarimizga qisqa vaqt oralig'ida sifatli va arzon uylarni ijara uchun izlashga yordamlashamiz
                               </span></p>
-                           <p style="margin:2.86em 0em 0.36em 0em;text-align:Center;"><span><a HREF="#" target="_self"
+                           <p style="margin:2.86em 0em 0.36em 0em;text-align:Center;"><span><a HREF="properties.html" target="_self"
                                     class="btn btn-lg btn-default">Ko'proq ma'lumotlar</a></span></p>
                         </div>
                         <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
@@ -474,7 +491,7 @@
                         <div class="html_content">
                            <p style="text-align:Center;"><span class="ttr_image"
                                  style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 1.43em 0em;"><span><img
-                                       class="ttr_uniform" src="images/av1.png"
+                                       class="ttr_uniform" src="images/human1.png"
                                        style="max-width:250px;max-height:250px;" /></span></span><span
                                  style="font-family:'Titillium Web','Arial';font-size:1.571em;color:rgba(53,53,53,1);">Sarvar
                                  Komilov</span></p>
@@ -491,7 +508,7 @@
                         <div class="html_content">
                            <p style="text-align:Center;"><span class="ttr_image"
                                  style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 1.43em 0em;"><span><img
-                                       class="ttr_uniform" src="images/av2.png"
+                                       class="ttr_uniform" src="images/human2.png"
                                        style="max-width:250px;max-height:250px;" /></span></span><span
                                  style="font-family:'Titillium Web','Arial';font-size:1.571em;color:rgba(53,53,53,1);">Elbek
                                  Tohirov</span></p>
@@ -508,7 +525,7 @@
                         <div class="html_content">
                            <p style="text-align:Center;"><span class="ttr_image"
                                  style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 1.43em 0em;"><span><img
-                                       class="ttr_uniform" src="images/av4.png"
+                                       class="ttr_uniform" src="images/human4.png"
                                        style="max-width:250px;max-height:250px;" /></span></span><span
                                  style="font-family:'Titillium Web','Arial';font-size:1.571em;color:rgba(53,53,53,1);">Zuhra
                                  Olimova</span></p>
@@ -525,7 +542,7 @@
                         <div class="html_content">
                            <p style="text-align:Center;"><span class="ttr_image"
                                  style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 1.43em 0em;"><span><img
-                                       class="ttr_uniform" src="images/av3.png"
+                                       class="ttr_uniform" src="images/human5.png"
                                        style="max-width:250px;max-height:250px;" /></span></span><span
                                  style="font-family:'Titillium Web','Arial';font-size:1.571em;color:rgba(53,53,53,1);">Tamara
                                  Karimova</span></p>
@@ -547,11 +564,11 @@
       <footer id="ttr_footer">
          <div class="ttr_footer_bottom_footer">
             <div class="ttr_footer_bottom_footer_inner">
-               <a href="#" class="ttr_footer_facebook" target="_self">
+               <a href="https://facebook.com/studenthousen1" class="ttr_footer_facebook" target="_self">
                </a>
-               <a href="#" class="ttr_footer_twitter" target="_self">
+               <a href="https://instagram.com/studenthousen1" class="ttr_footer_twitter" target="_self">
                </a>
-               <a href="#" class="ttr_footer_googleplus" target="_self">
+               <a href="https://t.me/studenthousen1" class="ttr_footer_googleplus" target="_self">
                </a>
             </div>
          </div>
