--- a/properties.html
+++ b/properties.html
@@ -19,23 +19,10 @@
    </title>
    <link rel="stylesheet" href="bootstrap.css" type="text/css" media="screen" />
    <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
-   <!--[if lte IE 8]>
-<link rel="stylesheet"  href="menuie.css" type="text/css" media="screen"/>
-<link rel="stylesheet"  href="vmenuie.css" type="text/css" media="screen"/>
-<![endif]-->
+
    <script type="text/javascript" src="totop.js">
    </script>
-   <!--[if IE 7]>
-<style type="text/css" media="screen">
-#ttr_vmenu_items  li.ttr_vmenu_items_parent {margin-left:-16px;font-size:0px;}
-</style>
-<![endif]-->
-   <!--[if lt IE 9]>
-<script type="text/javascript" src="html5shiv.js">
-</script>
-<script type="text/javascript" src="respond.min.js">
-</script>
-<![endif]-->
+
 </head>
 
 <body class="Properties">
@@ -52,10 +39,10 @@
                <div class="html_content">
                   <p style="margin:0em 0em 0.57em 0em;line-height:1.40845070422535;"><span
                         style="font-family:'Open Sans','Open Sans','Arial';font-size:1.143em;color:rgba(53,53,53,1);">
-                        <a href="tel:+998941234567">Tel:- +998 94 123 45 67</a></span></p>
+                        <a href="tel:+998944911901">Tel:- +998 94 491 19 01</a></span></p>
                   <p style="margin:0.57em 0em 0.57em 0em;line-height:1.40845070422535;"><span
                         style="font-family:'Open Sans','Open Sans','Arial';font-size:1.143em;color:rgba(53,53,53,1);">
-                        <a href="mailto:demo@demo.uz">Email:- demo@demo.uz</a></span></p>
+                        <a href="mailto:behzodmalik@gmail.com">Email:- behzodmalik@gmail.com</a></span></p>
                </div>
             </div>
          </div>
@@ -388,11 +375,11 @@
       <footer id="ttr_footer">
          <div class="ttr_footer_bottom_footer">
             <div class="ttr_footer_bottom_footer_inner">
-               <a href="#" class="ttr_footer_facebook" target="_self">
+               <a href="https://facebook.com/studenthousen1" class="ttr_footer_facebook" target="_self">
                </a>
-               <a href="#" class="ttr_footer_twitter" target="_self">
+               <a href="https://instagram.com/studenthousen1" class="ttr_footer_twitter" target="_self">
                </a>
-               <a href="#" class="ttr_footer_googleplus" target="_self">
+               <a href="https://t.me/studenthousen1" class="ttr_footer_googleplus" target="_self">
                </a>
             </div>
          </div>
